# excalidraw-refined

./: .gitignore  .release-it.json  LICENSE  Makefile  README.md  docker-compose-dev.yaml  docker-compose.yaml  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/pre-build/: README.md  devcontainer.json
.github/workflows/: deploy.yaml  pr.yaml
backend/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 03eb4b53ce62_add_soft_delete_capability.py  0e27910c4854_add_indexes.py  b8b6c3e875b2_initial_migration.py  b920c8dd9ca9_initial_migration.py  c89365667a49_add_description_column_to_scene.py
backend/server/: main.py
backend/server/api/: dependencies.py
backend/server/api/v1/: auth.py  redirect_cookie_transport.py  router.py  scenes.py  users.py
backend/server/controllers/: scenes.py
backend/server/db/: database.py  models.py
chart/: .gitignore  README.md
chart/excalidraw-refined/: Chart.yaml  values.yaml
config/nginx/: default.conf  default.conf.template
deployment/base/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml
deployment/with-secret/: kustomization.yaml  secret.yaml
frontend/: Dockerfile  README.md  index.html  orval.config.js  package-lock.json  package.json  vite.config.js  vite.config.ts
frontend/config/: frontend.conf
frontend/src/: App.css  App.tsx  BrowseScenesModal.tsx  Callback.tsx  Login.tsx  (+5 more)
scripts/: install-deps.sh
(+47 files in other folders)
