[tool.poetry]
name = "excalidraw-server"
version = "0.1.4"
description = ""
authors = ["Elran Shefer <elran777@gmail.com>"]
packages = [
    {include = "server", from = "."},
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
SQLAlchemy = "^2.0.25"
alembic = "^1.13.1"
pydantic = "^2.5.3"
sqlalchemy-easy-softdelete = "^0.8.3"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.2"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.9"
pydantic-settings = "^2.4.0"
itsdangerous = "^2.2.0"
fastapi-users = {extras = ["oauth", "sqlalchemy"], version = "^13.0.0"}
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.14"
ipdb = "^0.13.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
src = ["server"]